--- a/src/app/components/template/nav/nav.component.css
+++ b/src/app/components/template/nav/nav.component.css
@@ -7,6 +7,11 @@
     color: #ffffff;
 }
 
-.sidenav i{
+.sidenav i {
     padding-right: 10px;
+}
+
+.content {
+    padding: 16px;
+    background-color: #ffffff;
 }
