--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="footer">
-    <span>Setembro de 2020 &copy; Desenvolvido por <strong>Wilander Assis</strong></span>
+    <span>Setembro de 2020 &copy; Desenvolvido por <strong appRed> Wilander Assis</strong></span>
 </mat-toolbar>
